--- a/styling/main.css
+++ b/styling/main.css
@@ -2,24 +2,51 @@ body{
 margin: 0;
 
 }
+* {box-sizing: border-box;}
 
-nav{
+/* nav{
 width: 100%;
 background-color: pink;
 font-size: 25px;
-text-align: center;
+display: flex;
+padding: 1rem;
+gap: 10px;
+overflow: hidden;
 }
 
 nav a, li{
     text-decoration: none;
-    display: inline;
+    display: block;
     margin-left: 5px;
 }
 
 nav a:hover{
     text-decoration: underline;
+    background-color: blue;
 }
 
+/**Search Bar**/
+/* .icon{
+    width: 30px;
+    height: 30px;
+    display: inline;
+}
+
+#searchbar{
+    height: 2rem;
+    display:inline;
+    margin-top: 2%;
+    font-size: 1rem;
+    float: right;
+} */ 
+
+/* #searchbar ::before{
+    content: icon;
+} */
+
+/* nav li button{
+    float: right;
+} */
 
 .char-list{
     width: fit-content;
@@ -43,7 +70,7 @@ nav a:hover{
 img {
     width: 200px;
     height: 300px;
-    background-color: gray;
+    
     margin-bottom: 20px;
     /* --webkit-transform: skew(-5deg, 0);
     transform: skew(-5deg, 0); */
@@ -102,4 +129,10 @@ h1{
 .style-container img{
     --webkit-transform: skew(-5deg, 0);
     transform: skew(-5deg, 0);
+    
 }
+
+
+
+
+
