--- a/styling/main.css
+++ b/styling/main.css
@@ -1,52 +1,16 @@
+/*Font Import*/
+@import "/sapp-hub/fonts/stylesheet.css";
+
+
 body{
 margin: 0;
 
 }
 * {box-sizing: border-box;}
 
-/* nav{
-width: 100%;
-background-color: pink;
-font-size: 25px;
-display: flex;
-padding: 1rem;
-gap: 10px;
-overflow: hidden;
-}
-
-nav a, li{
-    text-decoration: none;
-    display: block;
-    margin-left: 5px;
-}
-
-nav a:hover{
-    text-decoration: underline;
-    background-color: blue;
-}
-
-/**Search Bar**/
-/* .icon{
-    width: 30px;
-    height: 30px;
-    display: inline;
-}
-
-#searchbar{
-    height: 2rem;
-    display:inline;
-    margin-top: 2%;
-    font-size: 1rem;
-    float: right;
-} */ 
-
-/* #searchbar ::before{
-    content: icon;
-} */
-
-/* nav li button{
-    float: right;
-} */
+/* For Light/Dark Mode In the Future: 
+https://dev.to/ayc0/light-dark-mode-system-mode-user-preferences-1fcd
+Use App colors as inspiration!*/
 
 .char-list{
     width: fit-content;
@@ -70,7 +34,6 @@ nav a:hover{
 img {
     width: 200px;
     height: 300px;
-    
     margin-bottom: 20px;
     /* --webkit-transform: skew(-5deg, 0);
     transform: skew(-5deg, 0); */
@@ -122,8 +85,9 @@ h1{
     background-color: gray;
     height: 300px;
     width: 200px;
-    margin-left: 10px;
+    margin-left: 25px;
     margin-right: 10px;
+    margin-bottom: 20px;
 }
 
 .style-container img{
@@ -132,6 +96,18 @@ h1{
     
 }
 
+/* When I move into transformations I can use margin-left: -20px; to shift sillhouette over.*/
+
+/*Font Family*/
+h1{
+    font-family: 'boom_comic_fontregular';
+    font-size: 60px;
+}
+
+nav{
+    font-family: 'Permanent Marker', cursive;
+
+}
 
 
 
