--- a/styling/main.css
+++ b/styling/main.css
@@ -20,11 +20,13 @@ Use App colors as inspiration!*/
 }
 
 .char-list{
-    width: fit-content;
+    /* width: fit-content; */
     display: flex;
-    flex-flow:row wrap;
-    margin-left: 5px;
-    margin-right: 5px;
+    flex-wrap:wrap;
+    justify-content: space-evenly;
+    /* margin-left: 5px;
+    margin-right: 5px; */
+    gap: 5px;
     
 }
 
@@ -39,6 +41,14 @@ Use App colors as inspiration!*/
      /* border: 5px solid rgb(0, 0, 0);  */
 }
 
+.char-box-vue{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 10px;
+    flex-wrap: wrap;
+    
+}
+
 img {
     width: 200px;
     height: 300px;
@@ -47,11 +57,11 @@ img {
     transform: skew(-5deg, 0); */
 }
 
-#john{
+.style-container:nth-child(2){
     transition: all 0.5s ease;
 }
 
-#john:hover {
+.style-container:nth-child(2):hover {
 --dotSize: 0.25rem;
 --bgSize: 1.35rem;
 --bgPosition: calc(var(--bgSize) / 2);
@@ -83,21 +93,6 @@ h1{
 }
 
 /**Style Container**/
-.style-container{
-    -webkit-backface-visibility : hidden; 
-    backface-visibility: hidden;
-    -webkit-transform: skew(5deg, 0);
-    transform: skew(5deg, 0);
-    overflow: hidden;
-    border: 5px solid rgb(0, 0, 0);
-    background-color: gray;
-    height: 300px;
-    width: 200px;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 20px;
-}
-
 .style-container{
     -webkit-backface-visibility : hidden; 
     backface-visibility: hidden;
